// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsScrapReasonEdit > renders correctly if selected scrap reason is not in scrapReasonsMap 1`] = `<removed-entity-view-stub />`;

exports[`SettingsScrapReasonEdit > renders correctly when adding new 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      New: Scrap reason
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <station-difference-notification-stub
        stationstoberemoved=""
      />
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              disabled="false"
              filled="true"
              grow="false"
              hint="Scrap reason name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue=""
              persistent-hint=""
              placeholder="Name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('Scrap reason name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Group"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Group"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <generic-station-input-stub
              groupsoverride="[object Object],[object Object]"
              itemsoverride="[object Object],[object Object],[object Object],[object Object]"
              modelvalue=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="true"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Tags (Optional)"
              inverted="false"
              isgroupedselect="false"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items=""
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Tags"
              prependtext=""
              removenonexistentselections="false"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 my-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <multi-line-switch-stub
              disabled="false"
              helptext="When enabled operators must enter an extra note when using this reason."
              maintext="Require extra note from operators"
              modelvalue="false"
              samelineinput="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <multi-line-switch-stub
              disabled="false"
              helptext="When enabled, this reason will add scrap and increase total quantity."
              maintext="Add scrap and increase total quantity"
              modelvalue="false"
              samelineinput="false"
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Translations
          </span>
          <!--v-if-->
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        >
          Please add translations
        </div>
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <settings-translations-card-stub
        entityid="NaN"
        languagetextentity="scrap_reason"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsScrapReasonEdit > renders correctly when edit is forbidden 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      scrap reason 1
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <station-difference-notification-stub
        stationstoberemoved=""
      />
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              disabled="true"
              filled="true"
              grow="false"
              hint="Scrap reason name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue="scrap reason 1"
              persistent-hint=""
              placeholder="Name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('Scrap reason name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="true"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Group"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue="2"
              numericorderby="false"
              placeholder="Group"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <generic-station-input-stub
              groupsoverride="[object Object],[object Object]"
              itemsoverride="[object Object],[object Object],[object Object]"
              modelvalue=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="true"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Tags (Optional)"
              inverted="false"
              isgroupedselect="false"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items=""
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Tags"
              prependtext=""
              removenonexistentselections="false"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 my-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <multi-line-switch-stub
              disabled="true"
              helptext="When enabled operators must enter an extra note when using this reason."
              maintext="Require extra note from operators"
              samelineinput="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <multi-line-switch-stub
              disabled="true"
              helptext="When enabled, this reason will add scrap and increase total quantity."
              maintext="Add scrap and increase total quantity"
              samelineinput="false"
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Translations
          </span>
          <!--v-if-->
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        >
          Please add translations
        </div>
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <settings-translations-card-stub
        entityid="1"
        languagetextentity="scrap_reason"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <!--v-if-->
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsScrapReasonEdit > renders correctly when editing existing 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      scrap reason 1
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <station-difference-notification-stub
        stationstoberemoved=""
      />
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              disabled="false"
              filled="true"
              grow="false"
              hint="Scrap reason name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue="scrap reason 1"
              persistent-hint=""
              placeholder="Name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('Scrap reason name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Group"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue="2"
              numericorderby="false"
              placeholder="Group"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <generic-station-input-stub
              groupsoverride="[object Object],[object Object]"
              itemsoverride="[object Object],[object Object],[object Object]"
              modelvalue=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="true"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Tags (Optional)"
              inverted="false"
              isgroupedselect="false"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items=""
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Tags"
              prependtext=""
              removenonexistentselections="false"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 my-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <multi-line-switch-stub
              disabled="false"
              helptext="When enabled operators must enter an extra note when using this reason."
              maintext="Require extra note from operators"
              samelineinput="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <multi-line-switch-stub
              disabled="false"
              helptext="When enabled, this reason will add scrap and increase total quantity."
              maintext="Add scrap and increase total quantity"
              samelineinput="false"
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Translations
          </span>
          <!--v-if-->
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        >
          Please add translations
        </div>
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <settings-translations-card-stub
        entityid="1"
        languagetextentity="scrap_reason"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;

exports[`SettingsScrapReasonEdit > renders correctly when editing existing and stationsToBeRemoved is not empty 1`] = `
<div
  class="bg-quaternary-dark fill-height full-width"
  data-v-4db4f123=""
>
  <v-card-stub
    border="false"
    class="mx-auto mb-10 mt-10"
    data-v-4db4f123=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <!--v-if-->
    
    
    <v-card-title-stub
      class="justify-center d-flex white-space-wrap text-center"
      data-v-4db4f123=""
      id="primary-title"
      tag="div"
    >
      scrap reason 1
    </v-card-title-stub>
    <!--v-if-->
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <station-difference-notification-stub
        stationstoberemoved="1"
      />
      <v-form-stub
        disabled="false"
        fastfail="false"
        modelvalue="true"
        validateon="input"
      >
        <v-row-stub
          dense="false"
          density="default"
          nogutters="false"
          tag="div"
        >
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <evocon-v-input-stub
              autofocus=""
              counter="200"
              disabled="false"
              filled="true"
              grow="false"
              hint="Scrap reason name"
              maxlength="200"
              modelmodifiers="[object Object]"
              modelvalue="scrap reason 1"
              persistent-hint=""
              placeholder="Name"
              required=""
              rules="(v) => !!v && !!v.trim() || _ctx.$t('Scrap reason name')"
              truncateinput="false"
              type="text"
              usechip="false"
              validate-on="blur"
              variant="filled"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="false"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Group"
              inverted="false"
              isgroupedselect="false"
              issingleselect="true"
              itemflag=""
              itemgroupidkey="groupId"
              items="[object Object],[object Object],[object Object],[object Object],[object Object]"
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue="2"
              numericorderby="false"
              placeholder="Group"
              prependtext=""
              removenonexistentselections="false"
              required="true"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <generic-station-input-stub
              groupsoverride="[object Object],[object Object]"
              itemsoverride="[object Object],[object Object],[object Object]"
              modelvalue=""
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="6"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <selection-input-stub
              checkbox="true"
              coloractiveprepend="false"
              disabled="true"
              disabledvalues=""
              emittoggleall="false"
              emptyequalsallselected="false"
              error="false"
              filled="true"
              groupidkey="id"
              groups=""
              groupsorderby="name"
              hiddenitemscount="0"
              hidesearch="false"
              hint="Tags (Optional)"
              inverted="false"
              isgroupedselect="false"
              issingleselect="false"
              itemflag=""
              itemgroupidkey="groupId"
              items=""
              itemsecondarytext=""
              itemtertiarytext=""
              itemtext="name"
              itemvalue="id"
              loading="false"
              menuinputtype="primary"
              modelvalue=""
              numericorderby="false"
              placeholder="Tags"
              prependtext=""
              removenonexistentselections="false"
              required="false"
              showemptyarrayasallselected="false"
              someselected="false"
              totalcount="0"
              usechips="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 my-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <multi-line-switch-stub
              disabled="false"
              helptext="When enabled operators must enter an extra note when using this reason."
              maintext="Require extra note from operators"
              samelineinput="false"
            />
          </v-col-stub>
          <v-col-stub
            class="px-1 mb-2"
            cols="12"
            lg="false"
            md="false"
            sm="false"
            tag="div"
            xl="false"
            xxl="false"
          >
            <multi-line-switch-stub
              disabled="false"
              helptext="When enabled, this reason will add scrap and increase total quantity."
              maintext="Add scrap and increase total quantity"
              samelineinput="false"
            />
          </v-col-stub>
        </v-row-stub>
      </v-form-stub>
      
    </div>
    <v-row-stub
      class="ma-4"
      data-v-4db4f123=""
      dense="false"
      density="default"
      nogutters="false"
      tag="div"
    >
      <v-col-stub
        class="text-center"
        cols="false"
        data-v-4db4f123=""
        lg="false"
        md="false"
        sm="false"
        tag="div"
        xl="false"
        xxl="false"
      >
        <div
          class="text-body-large font-weight-bold position-relative text-align-center full-width"
          data-v-4db4f123=""
          id="secondary-title"
        >
          <span
            class="segment-title"
            data-v-4db4f123=""
          >
            Translations
          </span>
          <!--v-if-->
          
          
        </div>
        <div
          class="text-body-medium text-secondary-text"
          data-v-4db4f123=""
          id="secondary-subtitle"
        >
          Please add translations
        </div>
      </v-col-stub>
    </v-row-stub>
    <div
      class="px-3"
      data-v-4db4f123=""
    >
      
      <settings-translations-card-stub
        entityid="1"
        languagetextentity="scrap_reason"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
    <v-card-actions-stub
      data-v-4db4f123=""
      tag="div"
    >
      
      <delete-button-stub />
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
</div>
`;
